infra/cdk.out/SuwappuStack.template.json
{
 "Description": "Suwappu Bot - Telegram trading bot infrastructure",
 "Resources": {
  "SuwappuVpc3688B326": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "SuwappuStack/SuwappuVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/Resource"
   }
  },
  "SuwappuVpcPublicSubnet1SubnetD763028D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "SuwappuStack/SuwappuVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SuwappuVpc3688B326"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PublicSubnet1/Subnet"
   }
  },
  "SuwappuVpcPublicSubnet1RouteTableE2B5EE6B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SuwappuStack/SuwappuVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SuwappuVpc3688B326"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PublicSubnet1/RouteTable"
   }
  },
  "SuwappuVpcPublicSubnet1RouteTableAssociation7A231D6D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SuwappuVpcPublicSubnet1RouteTableE2B5EE6B"
    },
    "SubnetId": {
     "Ref": "SuwappuVpcPublicSubnet1SubnetD763028D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "SuwappuVpcPublicSubnet1DefaultRouteF4BD07E9": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "SuwappuVpcIGW592E6ED6"
    },
    "RouteTableId": {
     "Ref": "SuwappuVpcPublicSubnet1RouteTableE2B5EE6B"
    }
   },
   "DependsOn": [
    "SuwappuVpcVPCGWBC2CA50F"
   ],
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "SuwappuVpcPublicSubnet1EIPEF039F17": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "SuwappuStack/SuwappuVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PublicSubnet1/EIP"
   }
  },
  "SuwappuVpcPublicSubnet1NATGateway0F916657": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "SuwappuVpcPublicSubnet1EIPEF039F17",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "SuwappuVpcPublicSubnet1SubnetD763028D"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SuwappuStack/SuwappuVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "SuwappuVpcPublicSubnet1DefaultRouteF4BD07E9",
    "SuwappuVpcPublicSubnet1RouteTableAssociation7A231D6D"
   ],
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PublicSubnet1/NATGateway"
   }
  },
  "SuwappuVpcPublicSubnet2Subnet9F4FED4E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "SuwappuStack/SuwappuVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SuwappuVpc3688B326"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PublicSubnet2/Subnet"
   }
  },
  "SuwappuVpcPublicSubnet2RouteTableFC6E0C7A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SuwappuStack/SuwappuVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SuwappuVpc3688B326"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PublicSubnet2/RouteTable"
   }
  },
  "SuwappuVpcPublicSubnet2RouteTableAssociationF9700262": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SuwappuVpcPublicSubnet2RouteTableFC6E0C7A"
    },
    "SubnetId": {
     "Ref": "SuwappuVpcPublicSubnet2Subnet9F4FED4E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "SuwappuVpcPublicSubnet2DefaultRoute9F18DD95": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "SuwappuVpcIGW592E6ED6"
    },
    "RouteTableId": {
     "Ref": "SuwappuVpcPublicSubnet2RouteTableFC6E0C7A"
    }
   },
   "DependsOn": [
    "SuwappuVpcVPCGWBC2CA50F"
   ],
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "SuwappuVpcPrivateSubnet1SubnetEA039E8C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "SuwappuStack/SuwappuVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SuwappuVpc3688B326"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PrivateSubnet1/Subnet"
   }
  },
  "SuwappuVpcPrivateSubnet1RouteTable97BE4101": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SuwappuStack/SuwappuVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SuwappuVpc3688B326"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PrivateSubnet1/RouteTable"
   }
  },
  "SuwappuVpcPrivateSubnet1RouteTableAssociationA6E0CE4A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SuwappuVpcPrivateSubnet1RouteTable97BE4101"
    },
    "SubnetId": {
     "Ref": "SuwappuVpcPrivateSubnet1SubnetEA039E8C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "SuwappuVpcPrivateSubnet1DefaultRoute3C428F6A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "SuwappuVpcPublicSubnet1NATGateway0F916657"
    },
    "RouteTableId": {
     "Ref": "SuwappuVpcPrivateSubnet1RouteTable97BE4101"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "SuwappuVpcPrivateSubnet2Subnet602AEA15": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "SuwappuStack/SuwappuVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SuwappuVpc3688B326"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PrivateSubnet2/Subnet"
   }
  },
  "SuwappuVpcPrivateSubnet2RouteTableE2B066C3": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SuwappuStack/SuwappuVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SuwappuVpc3688B326"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PrivateSubnet2/RouteTable"
   }
  },
  "SuwappuVpcPrivateSubnet2RouteTableAssociationAABC02C1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SuwappuVpcPrivateSubnet2RouteTableE2B066C3"
    },
    "SubnetId": {
     "Ref": "SuwappuVpcPrivateSubnet2Subnet602AEA15"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "SuwappuVpcPrivateSubnet2DefaultRoute1BB334ED": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "SuwappuVpcPublicSubnet1NATGateway0F916657"
    },
    "RouteTableId": {
     "Ref": "SuwappuVpcPrivateSubnet2RouteTableE2B066C3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "SuwappuVpcIsolatedSubnet1Subnet52049870": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "SuwappuStack/SuwappuVpc/IsolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SuwappuVpc3688B326"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/IsolatedSubnet1/Subnet"
   }
  },
  "SuwappuVpcIsolatedSubnet1RouteTableFE37AC1C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SuwappuStack/SuwappuVpc/IsolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SuwappuVpc3688B326"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/IsolatedSubnet1/RouteTable"
   }
  },
  "SuwappuVpcIsolatedSubnet1RouteTableAssociation3B762CD7": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SuwappuVpcIsolatedSubnet1RouteTableFE37AC1C"
    },
    "SubnetId": {
     "Ref": "SuwappuVpcIsolatedSubnet1Subnet52049870"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/IsolatedSubnet1/RouteTableAssociation"
   }
  },
  "SuwappuVpcIsolatedSubnet2Subnet25F394BA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "SuwappuStack/SuwappuVpc/IsolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SuwappuVpc3688B326"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/IsolatedSubnet2/Subnet"
   }
  },
  "SuwappuVpcIsolatedSubnet2RouteTableD44665AA": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SuwappuStack/SuwappuVpc/IsolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SuwappuVpc3688B326"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/IsolatedSubnet2/RouteTable"
   }
  },
  "SuwappuVpcIsolatedSubnet2RouteTableAssociationAE0C5B14": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SuwappuVpcIsolatedSubnet2RouteTableD44665AA"
    },
    "SubnetId": {
     "Ref": "SuwappuVpcIsolatedSubnet2Subnet25F394BA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/IsolatedSubnet2/RouteTableAssociation"
   }
  },
  "SuwappuVpcIGW592E6ED6": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SuwappuStack/SuwappuVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/IGW"
   }
  },
  "SuwappuVpcVPCGWBC2CA50F": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "SuwappuVpcIGW592E6ED6"
    },
    "VpcId": {
     "Ref": "SuwappuVpc3688B326"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuVpc/VPCGW"
   }
  },
  "AlbSecurityGroup86A59E99": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for ALB",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTP",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTPS",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "SuwappuVpc3688B326"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/AlbSecurityGroup/Resource"
   }
  },
  "EcsSecurityGroup44008BF1": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for ECS tasks",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "SuwappuVpc3688B326"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/EcsSecurityGroup/Resource"
   }
  },
  "EcsSecurityGroupfromSuwappuStackAlbSecurityGroupB4856895100005D258E95": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow from ALB",
    "FromPort": 10000,
    "GroupId": {
     "Fn::GetAtt": [
      "EcsSecurityGroup44008BF1",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "AlbSecurityGroup86A59E99",
      "GroupId"
     ]
    },
    "ToPort": 10000
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/EcsSecurityGroup/from SuwappuStackAlbSecurityGroupB4856895:10000"
   }
  },
  "RdsSecurityGroup632A77E4": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for RDS",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "VpcId": {
     "Ref": "SuwappuVpc3688B326"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/RdsSecurityGroup/Resource"
   }
  },
  "RdsSecurityGroupfromSuwappuStackEcsSecurityGroup1E9181405432A09FF108": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow PostgreSQL from ECS",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "RdsSecurityGroup632A77E4",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "EcsSecurityGroup44008BF1",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/RdsSecurityGroup/from SuwappuStackEcsSecurityGroup1E918140:5432"
   }
  },
  "SuwappuSecrets62048B4F": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": "Suwappu application secrets",
    "GenerateSecretString": {
     "GenerateStringKey": "SECRET_KEY",
     "SecretStringTemplate": "{\"TELEGRAM_BOT_TOKEN\":\"REPLACE_ME\",\"ENCRYPTION_KEY\":\"REPLACE_ME\",\"ADMIN_API_KEY\":\"REPLACE_ME\",\"LIFI_API_KEY\":\"REPLACE_ME\",\"TURNKEY_ORGANIZATION_ID\":\"REPLACE_ME\",\"TURNKEY_API_PUBLIC_KEY\":\"REPLACE_ME\",\"TURNKEY_API_PRIVATE_KEY\":\"REPLACE_ME\",\"WHATSAPP_ACCESS_TOKEN\":\"REPLACE_ME\",\"WHATSAPP_PHONE_NUMBER_ID\":\"REPLACE_ME\",\"ADMIN_IDS\":\"REPLACE_ME\"}"
    },
    "Name": "suwappu/app-secrets"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuSecrets/Resource"
   }
  },
  "SuwappuDatabaseSubnetGroupE6E68EEA": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for SuwappuDatabase database",
    "SubnetIds": [
     {
      "Ref": "SuwappuVpcIsolatedSubnet1Subnet52049870"
     },
     {
      "Ref": "SuwappuVpcIsolatedSubnet2Subnet25F394BA"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuDatabase/SubnetGroup/Default"
   }
  },
  "SuwappuStackSuwappuDatabaseSecret6B99D1ED3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"suwappu\"}"
    },
    "Name": "suwappu/db-credentials"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuDatabase/Secret/Resource"
   }
  },
  "SuwappuDatabaseSecretAttachment64C919C2": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "SuwappuStackSuwappuDatabaseSecret6B99D1ED3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "SuwappuDatabase7FC7BCD8"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuDatabase/Secret/Attachment/Resource"
   }
  },
  "SuwappuDatabase7FC7BCD8": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "BackupRetentionPeriod": 14,
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.micro",
    "DBName": "suwappubot",
    "DBSubnetGroupName": {
     "Ref": "SuwappuDatabaseSubnetGroupE6E68EEA"
    },
    "DeletionProtection": true,
    "Engine": "postgres",
    "EngineVersion": "15",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "SuwappuStackSuwappuDatabaseSecret6B99D1ED3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "suwappu",
    "MaxAllocatedStorage": 100,
    "MultiAZ": false,
    "PubliclyAccessible": false,
    "StorageType": "gp3",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "RdsSecurityGroup632A77E4",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Snapshot",
   "DeletionPolicy": "Snapshot",
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuDatabase/Resource"
   }
  },
  "SuwappuRepository3166B522": {
   "Type": "AWS::ECR::Repository",
   "Properties": {
    "ImageScanningConfiguration": {
     "ScanOnPush": true
    },
    "LifecyclePolicy": {
     "LifecyclePolicyText": "{\"rules\":[{\"rulePriority\":1,\"description\":\"Keep only 10 images\",\"selection\":{\"tagStatus\":\"any\",\"countType\":\"imageCountMoreThan\",\"countNumber\":10},\"action\":{\"type\":\"expire\"}}]}"
    },
    "RepositoryName": "suwappu"
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuRepository/Resource"
   }
  },
  "SuwappuClusterF20EEB8E": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterName": "suwappu-cluster",
    "ClusterSettings": [
     {
      "Name": "containerInsights",
      "Value": "enabled"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuCluster/Resource"
   }
  },
  "SuwappuLogs901F517E": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/suwappu",
    "RetentionInDays": 14
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuLogs/Resource"
   }
  },
  "SuwappuTaskTaskRoleB8E1A138": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuTask/TaskRole/Resource"
   }
  },
  "SuwappuTaskTaskRoleDefaultPolicy06C6CD88": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "secretsmanager:DescribeSecret",
        "secretsmanager:GetSecretValue"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Ref": "SuwappuDatabaseSecretAttachment64C919C2"
        },
        {
         "Ref": "SuwappuSecrets62048B4F"
        }
       ]
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "SuwappuTaskTaskRoleDefaultPolicy06C6CD88",
    "Roles": [
     {
      "Ref": "SuwappuTaskTaskRoleB8E1A138"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuTask/TaskRole/DefaultPolicy/Resource"
   }
  },
  "SuwappuTaskC46C6156": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "LOG_LEVEL",
        "Value": "INFO"
       },
       {
        "Name": "WALLET_PROVIDER",
        "Value": "local"
       },
       {
        "Name": "PORT",
        "Value": "10000"
       }
      ],
      "Essential": true,
      "HealthCheck": {
       "Command": [
        "CMD-SHELL",
        "curl -f http://localhost:10000/health || exit 1"
       ],
       "Interval": 30,
       "Retries": 3,
       "StartPeriod": 60,
       "Timeout": 5
      },
      "Image": {
       "Fn::Join": [
        "",
        [
         {
          "Fn::Select": [
           4,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "SuwappuRepository3166B522",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".dkr.ecr.",
         {
          "Fn::Select": [
           3,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "SuwappuRepository3166B522",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".",
         {
          "Ref": "AWS::URLSuffix"
         },
         "/",
         {
          "Ref": "SuwappuRepository3166B522"
         },
         ":latest"
        ]
       ]
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "SuwappuLogs901F517E"
        },
        "awslogs-stream-prefix": "suwappu",
        "awslogs-region": "us-east-1"
       }
      },
      "Name": "suwappu",
      "PortMappings": [
       {
        "ContainerPort": 10000,
        "Protocol": "tcp"
       }
      ],
      "Secrets": [
       {
        "Name": "DATABASE_URL",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "SuwappuDatabaseSecretAttachment64C919C2"
           },
           ":DATABASE_URL::"
          ]
         ]
        }
       },
       {
        "Name": "TELEGRAM_BOT_TOKEN",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "SuwappuSecrets62048B4F"
           },
           ":TELEGRAM_BOT_TOKEN::"
          ]
         ]
        }
       },
       {
        "Name": "ENCRYPTION_KEY",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "SuwappuSecrets62048B4F"
           },
           ":ENCRYPTION_KEY::"
          ]
         ]
        }
       },
       {
        "Name": "SECRET_KEY",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "SuwappuSecrets62048B4F"
           },
           ":SECRET_KEY::"
          ]
         ]
        }
       },
       {
        "Name": "ADMIN_API_KEY",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "SuwappuSecrets62048B4F"
           },
           ":ADMIN_API_KEY::"
          ]
         ]
        }
       },
       {
        "Name": "LIFI_API_KEY",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "SuwappuSecrets62048B4F"
           },
           ":LIFI_API_KEY::"
          ]
         ]
        }
       },
       {
        "Name": "ADMIN_IDS",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "SuwappuSecrets62048B4F"
           },
           ":ADMIN_IDS::"
          ]
         ]
        }
       }
      ]
     }
    ],
    "Cpu": "512",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "SuwappuTaskExecutionRole23EC76C6",
      "Arn"
     ]
    },
    "Family": "SuwappuStackSuwappuTask0C015F92",
    "Memory": "1024",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "SuwappuTaskTaskRoleB8E1A138",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuTask/Resource"
   }
  },
  "SuwappuTaskExecutionRole23EC76C6": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuTask/ExecutionRole/Resource"
   }
  },
  "SuwappuTaskExecutionRoleDefaultPolicy3A1C9E48": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:BatchGetImage",
        "ecr:GetDownloadUrlForLayer"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "SuwappuRepository3166B522",
         "Arn"
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "SuwappuLogs901F517E",
         "Arn"
        ]
       }
      },
      {
       "Action": [
        "secretsmanager:DescribeSecret",
        "secretsmanager:GetSecretValue"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Ref": "SuwappuDatabaseSecretAttachment64C919C2"
        },
        {
         "Ref": "SuwappuSecrets62048B4F"
        }
       ]
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "SuwappuTaskExecutionRoleDefaultPolicy3A1C9E48",
    "Roles": [
     {
      "Ref": "SuwappuTaskExecutionRole23EC76C6"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuTask/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "SuwappuAlbEE402080": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "AlbSecurityGroup86A59E99",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "SuwappuVpcPublicSubnet1SubnetD763028D"
     },
     {
      "Ref": "SuwappuVpcPublicSubnet2Subnet9F4FED4E"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "SuwappuVpcPublicSubnet1DefaultRouteF4BD07E9",
    "SuwappuVpcPublicSubnet1RouteTableAssociation7A231D6D",
    "SuwappuVpcPublicSubnet2DefaultRoute9F18DD95",
    "SuwappuVpcPublicSubnet2RouteTableAssociationF9700262"
   ],
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuAlb/Resource"
   }
  },
  "SuwappuAlbHttpListener9C476391": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "RedirectConfig": {
       "Port": "443",
       "Protocol": "HTTPS",
       "StatusCode": "HTTP_301"
      },
      "Type": "redirect"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "SuwappuAlbEE402080"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuAlb/HttpListener/Resource"
   }
  },
  "SuwappuAlbHttpsListenerCE6601D6": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "Certificates": [
     {
      "CertificateArn": "arn:aws:acm:us-east-1:905418423235:certificate/74e95aae-e397-44cc-9005-d964c97ebc41"
     }
    ],
    "DefaultActions": [
     {
      "FixedResponseConfig": {
       "ContentType": "text/plain",
       "MessageBody": "Not Found",
       "StatusCode": "404"
      },
      "Type": "fixed-response"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "SuwappuAlbEE402080"
    },
    "Port": 443,
    "Protocol": "HTTPS"
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuAlb/HttpsListener/Resource"
   }
  },
  "SuwappuWaf": {
   "Type": "AWS::WAFv2::WebACL",
   "Properties": {
    "DefaultAction": {
     "Allow": {}
    },
    "Rules": [
     {
      "Name": "AWSCommonRules",
      "OverrideAction": {
       "None": {}
      },
      "Priority": 1,
      "Statement": {
       "ManagedRuleGroupStatement": {
        "Name": "AWSManagedRulesCommonRuleSet",
        "VendorName": "AWS"
       }
      },
      "VisibilityConfig": {
       "CloudWatchMetricsEnabled": true,
       "MetricName": "AWSCommonRules",
       "SampledRequestsEnabled": true
      }
     },
     {
      "Action": {
       "Block": {}
      },
      "Name": "RateLimit",
      "Priority": 2,
      "Statement": {
       "RateBasedStatement": {
        "AggregateKeyType": "IP",
        "Limit": 2000
       }
      },
      "VisibilityConfig": {
       "CloudWatchMetricsEnabled": true,
       "MetricName": "RateLimit",
       "SampledRequestsEnabled": true
      }
     }
    ],
    "Scope": "REGIONAL",
    "VisibilityConfig": {
     "CloudWatchMetricsEnabled": true,
     "MetricName": "SuwappuWafMetrics",
     "SampledRequestsEnabled": true
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuWaf"
   }
  },
  "WafAlbAssociation": {
   "Type": "AWS::WAFv2::WebACLAssociation",
   "Properties": {
    "ResourceArn": {
     "Ref": "SuwappuAlbEE402080"
    },
    "WebACLArn": {
     "Fn::GetAtt": [
      "SuwappuWaf",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/WafAlbAssociation"
   }
  },
  "SuwappuAlerts4DC00454": {
   "Type": "AWS::SNS::Topic",
   "Properties": {
    "TopicName": "suwappu-alerts"
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/SuwappuAlerts/Resource"
   }
  },
  "Alb5xxAlarm99BFF946": {
   "Type": "AWS::CloudWatch::Alarm",
   "Properties": {
    "AlarmActions": [
     {
      "Ref": "SuwappuAlerts4DC00454"
     }
    ],
    "AlarmDescription": "ALB 5xx errors > 10 in 5 minutes",
    "ComparisonOperator": "GreaterThanOrEqualToThreshold",
    "Dimensions": [
     {
      "Name": "LoadBalancer",
      "Value": {
       "Fn::GetAtt": [
        "SuwappuAlbEE402080",
        "LoadBalancerFullName"
       ]
      }
     }
    ],
    "EvaluationPeriods": 1,
    "MetricName": "HTTPCode_Target_5XX_Count",
    "Namespace": "AWS/ApplicationELB",
    "Period": 300,
    "Statistic": "Sum",
    "Threshold": 10
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/Alb5xxAlarm/Resource"
   }
  },
  "RdsCpuAlarm29EF1690": {
   "Type": "AWS::CloudWatch::Alarm",
   "Properties": {
    "AlarmActions": [
     {
      "Ref": "SuwappuAlerts4DC00454"
     }
    ],
    "AlarmDescription": "RDS CPU utilization > 80%",
    "ComparisonOperator": "GreaterThanOrEqualToThreshold",
    "Dimensions": [
     {
      "Name": "DBInstanceIdentifier",
      "Value": {
       "Ref": "SuwappuDatabase7FC7BCD8"
      }
     }
    ],
    "EvaluationPeriods": 2,
    "MetricName": "CPUUtilization",
    "Namespace": "AWS/RDS",
    "Period": 300,
    "Statistic": "Average",
    "Threshold": 80
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/RdsCpuAlarm/Resource"
   }
  },
  "RdsFreeStorageAlarm0E00E3B8": {
   "Type": "AWS::CloudWatch::Alarm",
   "Properties": {
    "AlarmActions": [
     {
      "Ref": "SuwappuAlerts4DC00454"
     }
    ],
    "AlarmDescription": "RDS free storage < 5 GB",
    "ComparisonOperator": "LessThanThreshold",
    "Dimensions": [
     {
      "Name": "DBInstanceIdentifier",
      "Value": {
       "Ref": "SuwappuDatabase7FC7BCD8"
      }
     }
    ],
    "EvaluationPeriods": 1,
    "MetricName": "FreeStorageSpace",
    "Namespace": "AWS/RDS",
    "Period": 300,
    "Statistic": "Average",
    "Threshold": 5368709120
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/RdsFreeStorageAlarm/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31SwY7bIBD9lr0TmnWl3hOnXUWK2iiJtsdqjCdeNhgsZoi1Qvx7ZZzY6R56mjfvPeABU8ji6ze5fIKeFqq+LIyuZDwyqIuAnv5EVIWMr50S5dm+7kuxD5XR6hgqizxwMzq4wHiCyuDMz9yKyCkNrJ2dzAP4vt0P5SfwCzD28CH2Xl+Bcd54axm9xckwJrl1K2ZQby1aFkdUwWv+ePEudDnDf4mtbTwSJUGoPDK1YKFBL+Mx9zf/gMZyAt8gP5w3GT4rSfiaZNwAQwWEW0sMVqEYrzSl2awfibt7Pn2zvq9MApWX8YCdI83O5zeYu0EmGUsTiNEP2h3+AN/A8AN02eBZW31//8+Mswzaop+5JIxrSMada6bEd5yEhlbGgxv/Ote9M1rlYCNKAg0Qa2Uc1BUYsErb5lrIuOo6o1UehZ2Dep21Mfc//aNPE6O9eW44iR7Ow37l2 [...]
   },
   "Metadata": {
    "aws:cdk:path": "SuwappuStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "LoadBalancerDns": {
   "Description": "Load Balancer DNS Name",
   "Value": {
    "Fn::GetAtt": [
     "SuwappuAlbEE402080",
     "DNSName"
    ]
   },
   "Export": {
    "Name": "SuwappuLoadBalancerDns"
   }
  },
  "EcrRepositoryUri": {
   "Description": "ECR Repository URI",
   "Value": {
    "Fn::Join": [
     "",
     [
      {
       "Fn::Select": [
        4,
        {
         "Fn::Split": [
          ":",
          {
           "Fn::GetAtt": [
            "SuwappuRepository3166B522",
            "Arn"
           ]
          }
         ]
        }
       ]
      },
      ".dkr.ecr.",
      {
       "Fn::Select": [
        3,
        {
         "Fn::Split": [
          ":",
          {
           "Fn::GetAtt": [
            "SuwappuRepository3166B522",
            "Arn"
           ]
          }
         ]
        }
       ]
      },
      ".",
      {
       "Ref": "AWS::URLSuffix"
      },
      "/",
      {
       "Ref": "SuwappuRepository3166B522"
      }
     ]
    ]
   },
   "Export": {
    "Name": "SuwappuEcrUri"
   }
  },
  "ClusterName": {
   "Description": "ECS Cluster Name",
   "Value": {
    "Ref": "SuwappuClusterF20EEB8E"
   },
   "Export": {
    "Name": "SuwappuClusterName"
   }
  },
  "DatabaseEndpoint": {
   "Description": "RDS Database Endpoint",
   "Value": {
    "Fn::GetAtt": [
     "SuwappuDatabase7FC7BCD8",
     "Endpoint.Address"
    ]
   },
   "Export": {
    "Name": "SuwappuDatabaseEndpoint"
   }
  },
  "SecretsArn": {
   "Description": "Secrets Manager ARN for app secrets",
   "Value": {
    "Ref": "SuwappuSecrets62048B4F"
   },
   "Export": {
    "Name": "SuwappuSecretsArn"
   }
  },
  "AlertTopicArn": {
   "Description": "SNS Topic ARN for alerts (subscribe your email)",
   "Value": {
    "Ref": "SuwappuAlerts4DC00454"
   },
   "Export": {
    "Name": "SuwappuAlertTopicArn"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
